# auto-git-message

./: 404.html  CHANGELOG  README.md  index.html  index.txt  package.json  pnpm-lock.yaml
_next/static/chunks/: 463-3717dc582d0255a5.js  65d48fa5-00a625759055543b.js  801-dc3730907a20572e.js  main-160a1686e6bffc33.js  main-app-3dbafc3320fbe37c.js  webpack-a2cdf3eca5585f08.js
_next/static/chunks/app/: layout-ed60b1678b6c2698.js  page-695d27e5b180059e.js
_next/static/chunks/pages/: _app-0e8ba023dcbfffe6.js  _error-61b1cda6ad4dc820.js
_next/static/css/: ead4b5dca94958fd.css
_next/static/edrFxSaA0GmTf5sdSdUHW/: _buildManifest.js
apps/desktop-app/: .env.example  .gitignore  README.md  jest.config.ts  package.json
apps/desktop-app/src/: config.ts
apps/desktop-app/src-tauri/: .env.example  Cargo.toml  tauri.conf.json
apps/desktop-app/src-tauri/icons/: icon.icns
apps/desktop-app/src-tauri/src/: main.rs
apps/desktop-app/src-tauri/src/commands/: browser.rs  directory.rs  filesystem.rs  request.rs
apps/desktop-app/src-tauri/src/utils/: environment.rs
apps/desktop-app/src/app/: layout.tsx  page.tsx
apps/desktop-app/src/components/: app-state-container.tsx  file-content-changes.tsx  git-file-viewer.tsx  git-status-content-sheet.tsx  git-status-viewer.tsx  github-button.tsx  repository-changes.tsx  repository-setting.tsx  setting-button.tsx
apps/desktop-app/src/hooks/: use-force-update.hook.spec.ts  use-force-update.hook.test.ts  use-force-update.hook.ts
apps/home-page/: README.md  next.config.mjs  package.json
apps/home-page/src/app/: layout.tsx  page.tsx
(+30 files in other folders)
