[package]
name = "app"
version = "0.0.2"
description = "AutoGitMessage is a TypeScript-based full-stack application designed to streamline the process of generating commit messages. It reads code changes in a Git project, generates diffs, and utilizes AI to automatically write meaningful and contextually appropriate Git commit messages."
authors = ["Yuchen Wang <contact@wangyuchen.cn>"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.5", features = [ "fs-all", "shell-all", "dialog-all"] }
sentry = "0.32.3"
dotenvy = "0.15.7"
reqwest = "0.12.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
